--- a/package.json
+++ b/package.json
@@ -153,6 +153,9 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "13.0.4",
+    "@angular-eslint/eslint-plugin": "~12.6.0",
+    "@angular-eslint/eslint-plugin-template": "~12.6.0",
+    "@angular-eslint/template-parser": "~12.6.0",
     "@angular/cli": "13.0.4",
     "@angular/compiler-cli": "13.0.0",
     "@angular/language-service": "13.0.0",
@@ -160,8 +163,10 @@
     "@nestjs/testing": "^8.0.0",
     "@ngxs/devtools-plugin": "^3.7.2",
     "@nrwl/cli": "13.2.3",
+    "@nrwl/eslint-plugin-nx": "13.2.3",
     "@nrwl/express": "13.2.3",
     "@nrwl/jest": "13.2.3",
+    "@nrwl/linter": "13.2.3",
     "@nrwl/nest": "13.2.3",
     "@nrwl/node": "13.2.3",
     "@nrwl/tao": "13.2.3",
@@ -169,15 +174,16 @@
     "@types/express": "4.17.0",
     "@types/jest": "27.0.2",
     "@types/socket.io": "^2.1.11",
+    "@typescript-eslint/eslint-plugin": "~4.33.0",
+    "@typescript-eslint/parser": "~4.33.0",
     "@vercel/ncc": "^0.25.1",
-    "codelyzer": "6.0.0",
     "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
     "prettier": "2.3.1",
     "ts-jest": "27.0.5",
     "ts-node": "9.1.1",
-    "tslint": "6.1.3",
     "typescript": "4.4.4"
   }
 }
