added third-party-api app and implemented access to Fritzbox

--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,9 @@ SERVICE_USER=me
 SERVICE_PASSWORD=s3cr3t
 SERVICE_SECRET=some-very-secret-string
 PUBLIC_DOMAIN=something.myfritz.net
+FRITZ_BOX_IP=192.168.178.1
+FRITZ_BOX_USER=fritz123
+FRITZ_BOX_PASSWORD=s3cr3t
 GIT_USER=me
 GIT_EMAIL=me@my-provider.com
 AMAZON_EMAIL=amazon_account@email.address
@@ -15,3 +18,4 @@ HOME_POSITION_LAT=52.5069704
 HOME_POSITION_LON=13.2846503
 TELEGRAM_API_TOKEN=yoursupersecretaccesstoken
 TELEGRAM_RECEIVER_IDS=comma,separated,list,of,ids
+TANKERKOENIG_API_KEY=yoursupersecretaccesstoken
