--- a/package.json
+++ b/package.json
@@ -66,6 +66,12 @@
     "test:commuting-watcher": "nx test commuting-watcher",
     "docker:commuting-watcher": "docker build -t commuting-watcher -f apps/commuting-watcher/Dockerfile .",
     "ncc:commuting-watcher": "ncc build dist/apps/commuting-watcher/main.js -m -C -o dist/apps/commuting-watcher/vendor",
+    "########### third-party-api ###########": "############################################################################################################",
+    "start:third-party-api": "nx serve third-party-api",
+    "build:third-party-api": "nx build third-party-api",
+    "test:third-party-api": "nx test third-party-api",
+    "docker:third-party-api": "docker build -t third-party-api -f apps/third-party-api/Dockerfile .",
+    "ncc:third-party-api": "ncc build dist/apps/third-party-api/main.js -m -C -o dist/apps/third-party-api/vendor",
     "########### api-gateway ###########": "############################################################################################################",
     "start:api-gateway": "nx serve api-gateway",
     "build:api-gateway": "nx build api-gateway",
@@ -101,12 +107,14 @@
     "@angular/platform-browser": "13.0.0",
     "@angular/platform-browser-dynamic": "13.0.0",
     "@angular/router": "13.0.0",
+    "@nestjs/axios": "0.0.3",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "^0.4.0",
     "@nestjs/microservices": "^7.6.14",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^7.6.15",
+    "@nestjs/schedule": "^1.0.2",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.15",
@@ -171,6 +179,7 @@
     "@nrwl/node": "13.2.3",
     "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
+    "@types/cron": "^1.7.3",
     "@types/express": "4.17.0",
     "@types/jest": "27.0.2",
     "@types/socket.io": "^2.1.11",
