--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
     "body-parser": "^1.19.0",
+    "cache-manager": "^3.6.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
@@ -179,6 +180,7 @@
     "@nrwl/node": "13.2.3",
     "@nrwl/tao": "13.2.3",
     "@nrwl/workspace": "13.2.3",
+    "@types/cache-manager": "^3.4.2",
     "@types/cron": "^1.7.3",
     "@types/express": "4.17.0",
     "@types/jest": "27.0.2",
