added fuelprices to UI

--- a/apps/mqtt-client/.eslintrc.json
+++ b/apps/mqtt-client/.eslintrc.json
@@ -27,7 +27,8 @@
             "prefix": "smart-home-conx",
             "style": "kebab-case"
           }
-        ]
+        ],
+        "@typescript-eslint/no-namespace": "off"
       }
     },
     {
