--- a/package.json
+++ b/package.json
@@ -72,6 +72,12 @@
     "test:third-party-api": "nx test third-party-api",
     "docker:third-party-api": "docker build -t third-party-api -f apps/third-party-api/Dockerfile .",
     "ncc:third-party-api": "ncc build dist/apps/third-party-api/main.js -m -C -o dist/apps/third-party-api/vendor",
+    "########### notification-manager ###########": "############################################################################################################",
+    "start:notification-manager": "nx serve notification-manager",
+    "build:notification-manager": "nx build notification-manager",
+    "test:notification-manager": "nx test notification-manager",
+    "docker:notification-manager": "docker build -t notification-manager -f apps/notification-manager/Dockerfile .",
+    "ncc:notification-manager": "ncc build dist/apps/notification-manager/main.js -m -C -o dist/apps/notification-manager/vendor",
     "########### api-gateway ###########": "############################################################################################################",
     "start:api-gateway": "nx serve api-gateway",
     "build:api-gateway": "nx build api-gateway",
