--- a/package.json
+++ b/package.json
@@ -142,6 +142,8 @@
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-jwt": "^6.0.0",
+    "fabric": "^4.6.0",
+    "fabric-with-gestures": "^4.5.0",
     "fs-extra": "^9.0.1",
     "http-proxy-middleware": "^1.0.6",
     "influx": "^5.8.0",
@@ -189,6 +191,7 @@
     "@types/cache-manager": "^3.4.2",
     "@types/cron": "^1.7.3",
     "@types/express": "4.17.0",
+    "@types/fabric": "^4.5.7",
     "@types/jest": "27.0.2",
     "@types/socket.io": "^2.1.11",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
