--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@ngxs/storage-plugin": "^3.7.2",
     "@ngxs/store": "^3.7.2",
     "@nrwl/angular": "13.2.3",
+    "@swimlane/ngx-charts": "^20.1.0",
     "@types/node": "14.14.33",
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
