--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,6 +141,9 @@ services:
     volumes:
       # - influxdb-storage:/var/lib/influx.db
       - /data/influxdb:/var/lib/influx.db
+    environment:
+      - INFLUXDB_MONITOR_STORE_ENABLED=false
+      - INFLUXDB_REPORTING_DISABLED=true
 
   portainer:
     image: portainer/portainer
