fixed maps crawling

--- a/.env.template
+++ b/.env.template
@@ -14,8 +14,10 @@ WIFI_SSID=My FRITZ!Box 1234
 WIFI_PASS=topsecret
 GITHUB_ACCESS_TOKEN=yoursupersecretaccesstoken
 OPEN_WEATHER_MAP_APP_ID=yoursupersecretappid
-HOME_POSITION_LAT=52.5069704
-HOME_POSITION_LON=13.2846503
+HOME_POSITION_LAT=52.5200404584114
+HOME_POSITION_LON=13.404885411348497
+WORK_POSITION_LAT=53.46743501981721
+WORK_POSITION_LON=9.69165810738846
 TELEGRAM_API_TOKEN=yoursupersecretaccesstoken
 TELEGRAM_RECEIVER_IDS=comma,separated,list,of,ids
 TANKERKOENIG_API_KEY=yoursupersecretaccesstoken
